# robocup_pkg

./: .gitmodules  Dockerfile  docker-compose.yaml
youbot_bringup/: CMakeLists.txt  package.xml
youbot_bringup/launch/: octomap_mapping.launch  pcl_all_points.launch  realsense2_rs_camera.launch  youbot_svo.launch
youbot_simulation/youbot_gazebo_control/: CMakeLists.txt  youbot_gazebo_control_plugins.xml
youbot_simulation/youbot_gazebo_control/config/: base_controller.yaml  joint_state_controller.yaml
youbot_simulation/youbot_gazebo_control/launch/: arm_controller.launch  base_controller.launch  joint_state_controller.launch
youbot_simulation/youbot_gazebo_control/src/: steered_wheel_base_controller.cpp
youbot_simulation/youbot_gazebo_robot/: CMakeLists.txt  package.xml
youbot_simulation/youbot_gazebo_robot/launch/: youbot.launch  youbot_robocup.launch
youbot_simulation/youbot_gazebo_robot/rviz/: config.rviz
youbot_simulation/youbot_gazebo_worlds/: package.xml
youbot_simulation/youbot_gazebo_worlds/launch/: robocup.launch
youbot_simulation/youbot_gazebo_worlds/urdf/: robocup.urdf
